--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jargin_back",
   "version": "1.0.0",
+  "engines": {
+    "node": "17.3.0"
+  },
   "description": "JargIN interview resource application",
   "main": "server.js",
   "scripts": {
